--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/lorenzbr/BankStatementParser
 BugReports: https://github.com/lorenzbr/BankStatementParser/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
